src/styles.scss
$primary: #6d4aff;
$focus-ring-color: $primary;
$focus-ring-width: 2px;

$body-bg: #f6f6f6;
$body-secondary-bg: white;

$body-bg-dark: black;
$body-secondary-bg-dark: #171717;

::selection {
  background-color: $primary;
}

.bd-btn:focus,
.bd-btn:active {
  border-color: transparent !important;
}

.bd-link {
  color: var(--bs-body-color);
  font-weight: bold;
  text-decoration: none;
  cursor: pointer;
}

.bd-link:hover {
  color: $primary !important;
  transition: all 200ms;
}

.bd-blog-content img {
  max-width: 100%;
  border-radius: 0.7rem;
}

.dropdown-menu {
  padding: 0 !important;
  overflow: hidden;
}

.dropdown-toggle.hide-arrow::after {
  display: none !important;
}

div:has(> .bd-sidebar) {
  min-width: 15%;
}

.bd-sidebar {
  position: sticky;
  top: 5rem;
}

.nav-link {
  display: flex !important;
  align-items: center;
  gap: 0.3rem;
  color: var(--bs-body-color) !important;
}

.bd-sidebar .nav-link.active {
  background-color: var(--bs-secondary-bg) !important;
  box-shadow: var(--bs-box-shadow-sm);
}

.NgxEditor__Wrapper {
  border: var(--bs-border-width) solid var(--bs-border-color) !important;
  border-radius: var(--bs-border-radius) !important;
  overflow-x: hidden;
}

.NgxEditor__MenuBar {
  background-color: var(--bs-body-bg) !important;
  user-select: none;

  input[type="text"],
  input[type="url"] {
    @extend .form-control;
  }

  input[type="checkbox"] {
    accent-color: $primary !important;
  }
}

.NgxEditor__Popup {
  background-color: var(--bs-secondary-bg) !important;

  button {
    @extend .btn;
    @extend .btn-primary;
    @extend .btn-sm;
    width: 100%;
  }
}

.NgxEditor__MenuItem--Icon:hover,
.NgxEditor__Dropdown--Text:hover {
  color: $primary !important;
}

.NgxEditor__MenuItem--Icon:focus,
.NgxEditor__Dropdown--Text:focus {
  outline-color: var(--bs-outline-color) !important;
}

.NgxEditor__MenuItem--Active,
.NgxEditor__Dropdown--Selected {
  background-color: #e8e3fd !important;
  color: $primary !important;
}

.NgxEditor__Dropdown--Item {
  background-color: var(--bs-body-bg) !important;
}

.NgxEditor__Dropdown--Item:hover {
  background-color: var(--bs-secondary-bg) !important;
}

[data-bs-theme="dark"] {
  .NgxEditor {
    background-color: var(--bs-secondary-bg) !important;
    color: white;
  }
}

[data-bs-theme="light"] {
  .btn-secondary {
    --bs-secondary: #cccccc;

    --bs-btn-bg: var(--bs-secondary);
    --bs-btn-border-color: var(--bs-secondary);
    --bs-btn-hover-bg: color-mix(in srgb, var(--bs-secondary), black 15%);
    --bs-btn-hover-border-color: color-mix(
      in srgb,
      var(--bs-secondary),
      black 15%
    );
    --bs-btn-active-bg: color-mix(in srgb, var(--bs-secondary), black 20%);
    --bs-btn-active-border-color: color-mix(
      in srgb,
      var(--bs-secondary),
      black 20%
    );
  }
}

[data-bs-theme="dark"] {
  .btn-secondary {
    --bs-secondary: #404040;

    --bs-btn-bg: var(--bs-secondary);
    --bs-btn-border-color: var(--bs-secondary);
    --bs-btn-hover-bg: color-mix(in srgb, var(--bs-secondary), black 15%);
    --bs-btn-hover-border-color: color-mix(
      in srgb,
      var(--bs-secondary),
      black 15%
    );
    --bs-btn-active-bg: color-mix(in srgb, var(--bs-secondary), black 20%);
    --bs-btn-active-border-color: color-mix(
      in srgb,
      var(--bs-secondary),
      black 20%
    );
  }
}

@import "../node_modules/bootstrap/scss/bootstrap";

